# barracuda_ws_2024

./: Build barracuda_ws  README.md  ROS Syntax Note - Anis Kouba  ROS Syntax Note - Wiki ROS
action_executor/: CMakeLists.txt  package.xml
action_executor/scripts/: action_executor.py
com_vision/: CMakeLists.txt  package.xml
com_vision/scripts/: cv_hsv.py  hsv_calibrate_ball.py  hsv_calibrate_dummy.py  hsv_calibrate_line.py
com_vision/scripts/references/: cv_houghCircle_barracuda.py  cv_hsv_barracuda.py  cv_hsv_dummy_barracuda.py
launch/: calibrate_ball.launch  calibrate_dummy.launch  calibrate_line.launch  nasional_caca.launch  nasional_cece.launch  nasional_cici.launch  regional_jersey1.launch  regional_jersey2.launch  test.launch
local_strategy/: CMakeLists.txt  package.xml
local_strategy/scripts/: command_RefereeBox.txt  nasional_2023.py  nasional_caca.py  nasional_cece.py  nasional_cici.py  regional_jersey1.py  regional_jersey2.py  rosbridge_friend.py  serial_node.py
robot_control/: CMakeLists.txt  package.xml
robot_control/scripts/: ball_control.py  pose_control.py
