<?xml version="1.0"?>
<package format="2">
  <name>com_vision</name>
  <version>0.0.0</version>
  <description>The com_vision package</description>

  <maintainer email="wildan@gmail.com">wildan_w_m</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/EWS-Barracuda-Undip</url>
  <author email="wildan@gmail.com">wildan_w_m</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
